working on main section

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
       </section>
 
       <!-- Popular products -->
-      <section class="bg-[#EFEBE3] sora max-w-[1600px] mx-auto">
+      <!-- <section class="bg-[#EFEBE3] sora w-full md:max-w-[1600px] md:mx-auto">
         <h2>Popular Products</h2>
         
-        <div class="grid grid-cols-1 lg:grid-cols-2">
+        <div class="grid grid-cols-1 lg:grid-cols-2 max-w-[1320px] mx-auto">
 
           <div>
             <h3>30% off</h3>
@@ -132,11 +132,11 @@
             <button class="btn bg-white">Buy Now</button>
           </div>
   
-          <div class="grid grid-cols-2 lg:grid-cols-3">
+          <div class="grid grid-cols-2 lg:grid-cols-3 mb-20 ">
   
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 43.png" alt="">
-              <div>
+            <div class="grid grid-cols-2  bg-white rounded-lg w-[171px] lg:w-[255px] pl-2 py-2">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="-ml-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class="-mt-0.5 ml-2">4.5</a>
@@ -145,9 +145,42 @@
                 <p>$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 41.png" alt="">
-              <div>
+            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3 mr-3 ">
+              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="w-[147px] -ml-6">
+                <div class="flex">
+                  <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
+                  <a class="-mt-0.5 ml-2">4.5</a>
+                </div>
+                <h3>Tomato 500 g</h3>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3">
+              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="-ml-5">
+                <div class="flex">
+                  <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
+                  <a class="-mt-0.5 ml-2">4.5</a>
+                </div>
+                <h3>Potato 1 kg</h3>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3 mr-3">
+              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="w-[147px] -ml-6">
+                <div class="flex">
+                  <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
+                  <a class="-mt-0.5 ml-2">4.5</a>
+                </div>
+                <h3>Tomato 500 g</h3>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3 mr-3 md:w[275px]">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="-ml-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class="-mt-0.5 ml-2">4.5</a>
@@ -156,9 +189,20 @@
                 <p>$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 44.png" alt="">
-              <div>
+            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3 ">
+              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="w-[147px] -ml-6">
+                <div class="flex">
+                  <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
+                  <a class="-mt-0.5 ml-2">4.5</a>
+                </div>
+                <h3 class="">Tomato 500 g</h3>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mr-3">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="-ml-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class="-mt-0.5 ml-2">4.5</a>
@@ -167,69 +211,25 @@
                 <p>$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 41.png" alt="">
-              <div>
+            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mr-3">
+              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="-ml-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class="-mt-0.5 ml-2">4.5</a>
                 </div>
-                <h3>Onion 1 kg</h3>
+                <h3>Potato 1 kg</h3>
                 <p>$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 43.png" alt="">
-              <div>
+            <div class="hidden md:grid md:grid-cols-2 bg-white py-2 pl-2 rounded-lg">
+              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] rounded-lg" alt="">
+              <div class="-ml-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class="-mt-0.5 ml-2">4.5</a>
                 </div>
-                <h3>Onion 1 kg</h3>
-                <p>$39.99</p>
-              </div>
-            </div>
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 41.png" alt="">
-              <div>
-                <div class="flex">
-                  <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
-                </div>
-                <h3>Onion 1 kg</h3>
-                <p>$39.99</p>
-              </div>
-            </div>
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 43.png" alt="">
-              <div>
-                <div class="flex">
-                  <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
-                </div>
-                <h3>Onion 1 kg</h3>
-                <p>$39.99</p>
-              </div>
-            </div>
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 44.png" alt="">
-              <div>
-                <div class="flex">
-                  <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
-                </div>
-                <h3>Onion 1 kg</h3>
-                <p>$39.99</p>
-              </div>
-            </div>
-            <div class="grid grid-cols-2">
-              <img src="./c2-assets/image 44.png" alt="">
-              <div>
-                <div class="flex">
-                  <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
-                </div>
-                <h3>Onion 1 kg</h3>
+                <h3>Potato 1 kg</h3>
                 <p>$39.99</p>
               </div>
             </div>
@@ -237,6 +237,33 @@
   
           </div>
 
+        </div>
+
+      </section> -->
+
+      <!-- arrival and offers -->
+      <section class="max-w-[1320px] mx-auto grid grid-cols-1 w-11/12 lg:w-full border-4">
+        <h2 class="sora">Arrival & Offers</h2>
+
+        <div class="grid grid-cols-1 lg:flex gap-5">
+
+          <div class="w-full lg:w-[780px] bg-[#115414] rounded-3xl text-white grid grid-cols-2">
+            <div class="ml-3 lg:ml-7 mt-6 lg:mt-16">
+              <img src="./c2-assets/dawat-logo.png" class="mb-5" alt="">
+              <button class="btn bg-[#63B76D] w-[177px] md:w-[304px] mb-3 text-white border-none poppins lg:text-xl">Cook Exotic Dishes</button>
+              <h3 class="text-[22px] lg:text-[38px] poppins ">UP to <span class="font-bold">20% OFF</span></h3>
+            </div>
+            <img src="./c2-assets/dawat-mock-up.png" class="mt-9 ml-3 mb-4 lg:-mb-0" alt="">
+          </div>
+
+          <div class="w-full lg:w-[520px] bg-[#102861] rounded-3xl text-white grid grid-cols-2">
+            <div class="ml-3 lg:ml-7 mt-6 lg:mt-16">
+              <img src="./c2-assets/india-gate-logo.png" class="" alt="">
+              <button>World’s No.1 Rice</button>
+              <h3>UP to 40% OFF</h3>
+            </div>
+            <img src="./c2-assets/india-gate-mock-up.png" alt="">
+          </div>
         </div>
 
       </section>
