working on footer section

--- a/index.html
+++ b/index.html
@@ -48,19 +48,17 @@
     </style>
 
 </head>
-<body>
+<body class="mx-auto lg:w-full">
     <header class="sora  bg-gradient-to-b from-[#FFFFFF] to-[#EFEBE3]">
         <nav class="md:max-w-[1305px] mx-auto">
           <div class="navbar bg-base-100 ">
             <div class="navbar-start w-full lg:w-[610px]">
               
 
-              <!-- <a class="btn btn-ghost text-xl">daisyUI</a> -->
               <div class="flex ">
                 <img src="./c2-assets/logo-header.png" class="hidden lg:flex" alt="">
                 <div class="flex">
                   <img src="./c2-assets/Group (1).png" class="lg:hidden" alt="">
-                  <!-- <img src="./c2-assets/Vector (Stroke).png" class="h-[15px] my-auto lg:hidden"" alt=""> -->
                 </div>
               </div>
 
@@ -93,10 +91,10 @@
 
     <main>
       <!-- servics section -->
-      <section class="max-w-[1320px] mx-auto my-32 sora">
+      <section class="max-w-[1320px] mx-auto my-32 sora ">
         <h3 class="text-green-color text-4xl mb-5">Services</h3>
         
-        <div class="grid grid-cols-1 lg:grid-cols-3 space-x-4 space-y-6 lg:space-y-0">
+        <div class="grid grid-cols-1 lg:grid-cols-3 lg:space-x-4 space-y-6 lg:space-y-0 ">
 
           <div class="bg-[#EFEBE3] rounded-xl text-center">
             <div class="w-[150px] mx-auto rounded-full mt-7">
@@ -242,8 +240,8 @@
       </section> -->
 
       <!-- arrival and offers -->
-      <section class="max-w-[1320px] mx-auto grid grid-cols-1 w-11/12 lg:w-full border-4">
-        <h2 class="sora">Arrival & Offers</h2>
+      <section class="max-w-[1320px] mx-auto grid grid-cols-1 w-11/12 lg:w-full mb-48">
+        <h2 class="sora text-green-color text-4xl font-semibold mb-10">Arrival & Offers</h2>
 
         <div class="grid grid-cols-1 lg:flex gap-5">
 
@@ -257,20 +255,49 @@
           </div>
 
           <div class="w-full lg:w-[520px] bg-[#102861] rounded-3xl text-white grid grid-cols-2">
-            <div class="ml-3 lg:ml-7 mt-6 lg:mt-16">
+            <div class="ml-3 lg:ml-7 mt-6 lg:mt-12 mb-5">
               <img src="./c2-assets/india-gate-logo.png" class="" alt="">
-              <button>World’s No.1 Rice</button>
-              <h3>UP to 40% OFF</h3>
+              <button class="btn bg-[#2A4D97] w-[170px] md:w-[220px] mb-3 text-white border-none poppins lg:text-xl mt-5">World’s No.1 Rice</button>
+              <h3 class="text-[22px] lg:text-[30px] poppins mt-3">UP to <span class="font-bold">40% OFF</span></h3>
             </div>
-            <img src="./c2-assets/india-gate-mock-up.png" alt="">
+            <img src="./c2-assets/india-gate-mock-up.png" class="mt-12 lg:ml-6  ml-3 w-[135px] lg:w-[170px]" alt="">
           </div>
         </div>
 
       </section>
 
-    </main>
-    <footer>
+      <!-- new section -->
 
+      <!-- Grocery News -->
+
+
+    </main>
+    <footer class="bg-[#179800]">
+      <div class="w-auto lg:max-w-[1320px] lg:mx-auto  sora grid grid-cols-1 lg:grid-cols-3 text-white">
+
+        <div class="">
+          <img src="./c2-assets/logo-footer.png" alt="">
+          <p class="w-full lg:w-[420px] text-xl">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+        </div>
+
+        <div class="grid grid-cols-1 ">
+          <a>Product</a>
+          <a>Services</a>
+          <a>Contact Us</a>
+        </div>
+
+        <div class="">
+          <p>Follow Us</p>
+          <div>
+            <img src="./c2-assets/Facebook.png" alt="">
+            <img src="./c2-assets/Insta.png" alt="">
+            <img src="./c2-assets/Linkdn.png" alt="">
+            <img src="./c2-assets/Yutbe.png" alt="">
+          </div>
+
+        </div>
+
+      </div>
     </footer>
 </body>
 </html>
