edited arrival and offter section

--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
           </div>
 
           <div class="w-full lg:w-[520px] bg-[#102861] rounded-3xl text-white grid grid-cols-2">
-            <div class="ml-3 lg:ml-7 mt-6 lg:mt-12 mb-5">
-              <img src="./c2-assets/india-gate-logo.png" class="" alt="">
+            <div class="ml-3 lg:ml-7 mt-1 lg:mt-6 mb-1 lg:mb-5">
+              <img src="./c2-assets/india-gate-logo.png" class="w-[64px] lg:w-[93px]" alt="">
               <button class="btn bg-[#2A4D97] w-[170px] md:w-[220px] mb-3 text-white border-none poppins lg:text-xl mt-5">World’s No.1 Rice</button>
-              <h3 class="text-[22px] lg:text-[30px] poppins mt-3">UP to <span class="font-bold">40% OFF</span></h3>
+              <h3 class="text-[22px] lg:text-[30px] poppins mt-3 ">UP to <span class="font-bold">40% OFF</span></h3>
             </div>
-            <img src="./c2-assets/india-gate-mock-up.png" class="mt-12 lg:ml-6  ml-3 w-[135px] lg:w-[170px]" alt="">
+            <img src="./c2-assets/india-gate-mock-up.png" class="mt-9 lg:ml-6  ml-8 w-[115px] lg:w-[170px]" alt="">
           </div>
         </div>
 
@@ -269,7 +269,7 @@
       <!-- new section -->
 
       <!-- Grocery News -->
-      <section class="max-w-[1320px] mx-auto grid grid-cols-1 lg:grid-cols-2 bg-[#EFEBE3] relative  w-11/12 lg:w-full rounded-2xl lg:-bottom-36 -bottom-72 sora">
+      <section class="max-w-[1320px] mx-auto grid grid-cols-1 lg:grid-cols-2 bg-[#EFEBE3] relative  w-11/12 lg:w-full rounded-2xl lg:-bottom-52 -bottom-72 sora">
         
           <div>
             <img src="./c2-assets/vegetable-busket.png" class="lg:my-[56px] lg:ml-[100px] mt-14" alt="">
@@ -284,7 +284,7 @@
       </section>
 
     </main>
-    
+
     <footer class="bg-[#179800] ">
       <div class="w-11/12 lg:w-full lg:max-w-[1320px] lg:mx-auto  sora grid grid-cols-1 lg:grid-cols-3 text-white pt-[370px] relative ">
 
