--- a/index.html
+++ b/index.html
@@ -120,116 +120,125 @@
       </section>
 
       <!-- Popular products -->
-      <!-- <section class="bg-[#EFEBE3] sora w-full md:max-w-[1600px] md:mx-auto">
-        <h2>Popular Products</h2>
+      <section class="bg-[#EFEBE3] sora w-full md:max-w-[1600px] md:mx-auto mb-36">
+        <h2 class="text-green-color text-4xl font-semibold max-w-[1320px] mx-auto pt-24  text-left ">Popular Products</h2>
         
-        <div class="grid grid-cols-1 lg:grid-cols-2 max-w-[1320px] mx-auto">
+        <div class="grid grid-cols-1 lg:grid-cols-2 max-w-[1320px] mx-auto mt-9">
 
-          <div>
-            <h3>30% off</h3>
-            <p>Discover a world of treats, toys and essentials handpicked for </p>
-            <button class="btn bg-white">Buy Now</button>
+          <div class="border-4 bg-gradient-to-br from-green-400 to-green-100 w-full lg:w-[424px] lg:mb-28 mb-6 rounded-xl">
+            <h3 class="text-white text-3xl font-bold mb-4 ml-8 lg:mt-20 mt-10">30% off</h3>
+            <p class="mb-4 ml-8">Discover a world of treats, toys and <br> essentials handpicked for </p>
+            <button class="btn bg-white mb-4 text-xl ml-8">Buy Now</button>
+            <img src="./c2-assets/vegetable-offer.png" class="lg:ml-[140px] lg:-mt-[100px] ml-[95px] -mt-[80px]" alt="">
           </div>
   
           <div class="grid grid-cols-2 lg:grid-cols-3 mb-20 ">
-  
-            <div class="grid grid-cols-2  bg-white rounded-lg w-[171px] lg:w-[255px] pl-2 py-2">
-              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="-ml-5">
+            <!-- 1 -->
+            <div class="grid grid-cols-2  bg-white rounded-lg w-[177px] lg:w-[275px] ">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3>Onion 1 kg</h3>
-                <p>$39.99</p>
+                <h3 class="text-xs lg:text-base">Onion 1 kg</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3 mr-3 ">
-              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="w-[147px] -ml-6">
+            <!-- 2 -->
+            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px] rounded-lg  lg: ">
+              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3>Tomato 500 g</h3>
-                <p>$39.99</p>
+                <h3 class="text-xs lg:text-base">Tomato 500 g</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3">
-              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="-ml-5">
+            <!-- 3 -->
+            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px] rounded-lg lg:">
+              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3>Potato 1 kg</h3>
-                <p>$39.99</p>
+                <h3 class="text-xs lg:text-base">Potato 1 kg</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3 mr-3">
-              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="w-[147px] -ml-6">
+            <!-- 4 -->
+            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px]  rounded-lg  ">
+              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3>Tomato 500 g</h3>
-                <p>$39.99</p>
+                <h3 class="text-xs lg:text-base">Tomato 500 g</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3 mr-3 md:w[275px]">
-              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="-ml-5">
+            <!-- 5 -->
+            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px] rounded-lg  lg:">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3>Onion 1 kg</h3>
-                <p>$39.99</p>
+                <h3 class="text-xs lg:text-base">Onion 1 kg</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mb-3 ">
-              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="w-[147px] -ml-6">
+            <!-- 6 -->
+            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px]  rounded-lg  lg:">
+              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3 class="">Tomato 500 g</h3>
-                <p>$39.99</p>
+                <h3 class="text-xs lg:text-base">Tomato 500 g</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mr-3">
-              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="-ml-5">
+            <!-- 7 -->
+            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px]  rounded-lg ">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3>Onion 1 kg</h3>
-                <p>$39.99</p>
+                <h3 class="text-xs lg:text-base">Onion 1 kg</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            <div class="grid grid-cols-2 bg-white py-2 pl-2 rounded-lg mr-3">
-              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="-ml-5">
+            <!-- 8 -->
+            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px]  rounded-lg  lg:">
+              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3>Potato 1 kg</h3>
-                <p>$39.99</p>
+                <h3 class="text-xs lg:text-base">Potato 1 kg</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            <div class="hidden md:grid md:grid-cols-2 bg-white py-2 pl-2 rounded-lg">
-              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] rounded-lg" alt="">
-              <div class="-ml-5">
+            <!-- 9 -->
+            <div class="hidden md:grid md:grid-cols-2 bg-white lg:w-[275px] rounded-lg lg:">
+              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg lg:w-[80px]" alt="">
+              <div class="mt-3  lg:-ml-7">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
-                  <a class="-mt-0.5 ml-2">4.5</a>
+                  <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3>Potato 1 kg</h3>
-                <p>$39.99</p>
+                <h3 class="lg:text-base">Potato 1 kg</h3>
+                <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
             
@@ -238,7 +247,7 @@
 
         </div>
 
-      </section> -->
+      </section>
 
       <!-- Featured stores -->
       <section class="max-w-[1320px] mx-auto mb-24 sora w-11/12 lg:w-full">
