all section done

--- a/index.html
+++ b/index.html
@@ -123,20 +123,20 @@
       <section class="bg-[#EFEBE3] sora w-full md:max-w-[1600px] md:mx-auto mb-36">
         <h2 class="text-green-color text-4xl font-semibold max-w-[1320px] mx-auto pt-24  text-left ">Popular Products</h2>
         
-        <div class="grid grid-cols-1 lg:grid-cols-2 max-w-[1320px] mx-auto mt-9">
+        <div class="grid grid-cols-1 lg:grid-cols-2 max-w-[1320px] mx-auto mt-9 ">
 
-          <div class="border-4 bg-gradient-to-br from-green-400 to-green-100 w-full lg:w-[424px] lg:mb-28 mb-6 rounded-xl">
+          <div class="border-4 bg-gradient-to-br from-[#24cf06] to-green-100 w-full lg:w-[424px] lg:mb-28 mb-6 rounded-xl">
             <h3 class="text-white text-3xl font-bold mb-4 ml-8 lg:mt-20 mt-10">30% off</h3>
             <p class="mb-4 ml-8">Discover a world of treats, toys and <br> essentials handpicked for </p>
             <button class="btn bg-white mb-4 text-xl ml-8">Buy Now</button>
             <img src="./c2-assets/vegetable-offer.png" class="lg:ml-[140px] lg:-mt-[100px] ml-[95px] -mt-[80px]" alt="">
           </div>
   
-          <div class="grid grid-cols-2 lg:grid-cols-3 mb-20 ">
+          <div class="grid grid-cols-2 lg:grid-cols-3 mb-20 lg:-ml-48">
             <!-- 1 -->
-            <div class="grid grid-cols-2  bg-white rounded-lg w-[177px] lg:w-[275px] ">
-              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
-              <div class="mt-3 -ml-4 lg:-ml-7">
+            <div class="grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] mb-3 lg:mb-0">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
@@ -146,9 +146,9 @@
               </div>
             </div>
             <!-- 2 -->
-            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px] rounded-lg  lg: ">
-              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
-              <div class="mt-3 -ml-4 lg:-ml-7">
+            <div class="grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] lg:ml-4 mb-3 lg:mb-5">
+              <img src="./c2-assets/tomato.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
@@ -158,9 +158,9 @@
               </div>
             </div>
             <!-- 3 -->
-            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px] rounded-lg lg:">
-              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
-              <div class="mt-3 -ml-4 lg:-ml-7">
+            <div class="grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] lg:ml-8">
+              <img src="./c2-assets/potato.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
@@ -170,9 +170,9 @@
               </div>
             </div>
             <!-- 4 -->
-            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px]  rounded-lg  ">
-              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
-              <div class="mt-3 -ml-4 lg:-ml-7">
+            <div class="grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] mb-3 lg:mb-0 lg:-mt-9">
+              <img src="./c2-assets/tomato.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
@@ -182,9 +182,9 @@
               </div>
             </div>
             <!-- 5 -->
-            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px] rounded-lg  lg:">
-              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
-              <div class="mt-3 -ml-4 lg:-ml-7">
+            <div class="grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] mb-3 lg:mb-0 lg:ml-4 lg:-mt-9">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
@@ -194,9 +194,9 @@
               </div>
             </div>
             <!-- 6 -->
-            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px]  rounded-lg  lg:">
-              <img src="./c2-assets/image 41.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
-              <div class="mt-3 -ml-4 lg:-ml-7">
+            <div class="grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] mb-3 lg:mb-0 lg:ml-8 lg:-mt-9">
+              <img src="./c2-assets/tomato.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
@@ -206,9 +206,9 @@
               </div>
             </div>
             <!-- 7 -->
-            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px]  rounded-lg ">
-              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
-              <div class="mt-3 -ml-4 lg:-ml-7">
+            <div class="grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] mb-3 lg:mb-0 lg:-mt-5">
+              <img src="./c2-assets/image 43.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
@@ -218,9 +218,9 @@
               </div>
             </div>
             <!-- 8 -->
-            <div class="grid grid-cols-2 bg-white w-[177px] lg:w-[275px]  rounded-lg  lg:">
-              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg w-[53px] lg:w-[80px]" alt="">
-              <div class="mt-3 -ml-4 lg:-ml-7">
+            <div class="grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] lg:ml-4 lg:-mt-5">
+              <img src="./c2-assets/potato.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
@@ -230,18 +230,17 @@
               </div>
             </div>
             <!-- 9 -->
-            <div class="hidden md:grid md:grid-cols-2 bg-white lg:w-[275px] rounded-lg lg:">
-              <img src="./c2-assets/image 44.png" class="bg-[#EFEBE3] ml-3 my-2 rounded-lg lg:w-[80px]" alt="">
-              <div class="mt-3  lg:-ml-7">
+            <div class="hidden lg:grid grid-cols-2  bg-white rounded-lg h-[72px] w-[177px] lg:w-[275px] lg:h-[118px] lg:ml-8 lg:-mt-5">
+              <img src="./c2-assets/potato.png" class="bg-[#EFEBE3] ml-3 my-2 lg:my-4 rounded-lg w-[53px] lg:w-[80px]" alt="">
+              <div class="mt-3 -ml-4 lg:-ml-7 lg:mt-5">
                 <div class="flex">
                   <a <i class="fa-solid fa-star text-yellow-400 "></i></a>
                   <a class=" ml-2 text-xs lg:text-base">4.5</a>
                 </div>
-                <h3 class="lg:text-base">Potato 1 kg</h3>
+                <h3 class="text-xs lg:text-base">Potato 1 kg</h3>
                 <p class="text-xs lg:text-base">$39.99</p>
               </div>
             </div>
-            
   
           </div>
 
@@ -310,7 +309,7 @@
           </div>
           <div class="lg:text-left text-center ">
             <h1 class="lg:font-semibold lg:text-4xl lg:mt-[127px] mt-5 mb-4 text-green-color text-xl font-bold">Get Grocery News!</h1>
-            <p class="lg:font-semibold lg:text-xl mb-5 text-base ">Exclusive training tips, ticks, product deals and more.</p>
+            <p class="lg:font-semibold lg:text-xl mb-5 text-base mx-2 lg:mx-0">Exclusive training tips, ticks, product deals and more.</p>
             <input type="email" placeholder="Enter email..." class="input input-bordered w-[312px] lg:w-[470px] mb-5" /><br>
             <button class="btn bg-green-color text-white mb-9">Subscribe</button>
           </div>
@@ -322,24 +321,24 @@
     <footer class="bg-[#179800] ">
       <div class="w-11/12 lg:w-full lg:max-w-[1320px] lg:mx-auto  sora grid grid-cols-1 lg:grid-cols-3 text-white pt-[370px] relative ">
 
-        <div class="mb-9 ">
+        <div class="mb-9 ml-3 lg:ml-0">
           <img src="./c2-assets/logo-footer.png" class="mb-3" alt="">
           <p class="w-full lg:w-[420px] text-xl">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
         </div>
 
-        <div class="grid grid-cols-1 lg:ml-28 mb-8 lg:mt-5">
+        <div class="grid grid-cols-1 ml-3 lg:ml-28 mb-8 lg:mt-5">
           <a class="mb-3">Product</a>
           <a class="mb-3">Services</a>
           <a class="mb-3">Contact Us</a>
         </div>
 
-        <div class="lg:ml-60  lg:mt-20 ">
+        <div class="lg:ml-60 lg:mt-20 ml-3 mb-14 lg:mb-0">
           <p>Follow Us</p>
           <div class="grid grid-cols-4 mt-3">
             <img src="./c2-assets/Facebook.png" class="w-[23px] " alt="">
             <img src="./c2-assets/Insta.png" class="-ml-10 lg:ml-0" alt="">
             <img src="./c2-assets/Linkdn.png" class="-ml-20 lg:ml-0" alt="">
-            <img src="./c2-assets/Yutbe.png" class="-ml-24 lg:ml-0" alt="">
+            <img src="./c2-assets/Yutbe.png" class="-ml-28 lg:ml-0" alt="">
           </div>
 
         </div>
