updated service section

--- a/index.html
+++ b/index.html
@@ -98,19 +98,17 @@
         <div class="grid grid-cols-1 lg:grid-cols-3 lg:space-x-4 space-y-6 lg:space-y-0 ">
 
           <div class="bg-[#EFEBE3] rounded-xl text-center">
-            <div class="w-[150px] mx-auto rounded-full mt-7">
-              <img src="./c2-assets/service.png" class="mx-auto bg-white rounded-full w-[94px]" alt="">
-            </div>
+            <img src="./c2-assets/service.png" class="mx-auto mt-7 bg-white rounded-full p-5 overflow-visible" alt="">
             <h3 class="font-semibold text-2xl my-6">24/7 Services </h3>
             <p class="text-xl font-light mb-7 mx-3">Enjoy 24/7 services with lightning-fast delivery, bringing you fresh, healthy products anytime, anywhere!</p>
           </div>
           <div class="bg-[#EFEBE3] rounded-xl text-center">
-            <img src="./c2-assets/delivery.png" class="mx-auto mt-7 bg-white" alt="">
+            <img src="./c2-assets/delivery.png" class="mx-auto mt-7 bg-white rounded-full p-5" alt="">
             <h3 class="font-semibold text-2xl my-6">Fast Delivery</h3>
             <p class="text-xl font-light mb-7 mx-3">Experience lightning-fast and reliable delivery,ensuring your order reaches you quickly and hassle-free, every time!</p>
           </div>
           <div class="bg-[#EFEBE3] rounded-xl text-center">
-            <img src="./c2-assets/healthy.png" class="mx-auto mt-7 bg-white" alt="">
+            <img src="./c2-assets/healthy.png" class="mx-auto mt-7 bg-white rounded-full p-5" alt="">
             <h3 class="font-semibold text-2xl my-6">Healthy Products </h3>
             <p class="text-xl font-light mb-7 mx-3">Get fresh and healthy products delivered to your doorstep with our 24/7 fast and reliable service!</p>
           </div>
